<resources>
    <string name="app_name" translatable="false">Polar dispendium</string>
    <string name="app_name_reduzido" translatable="false">Polar dispendium - </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre ou Registre-se</string>
    <string name="action_sign_in_short">Entre</string>
    <string name="error_invalid_email">Este email é inválido</string>
    <string name="error_invalid_password">Essa senha é muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo necessário</string>
    <string name="permission_rationale">"Necessário permissão para acesso aos contatos."</string>
    <string name="title_activity_tela_principal">TelaPrincipal</string>
    <string name="tituloDialog">Nova atividade física realizada</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="ed_hint_hora_de_termino">Hora de Término</string>
    <string name="ed_hint_hora_de_inicio">Hora de Início</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="tv_peso_atual">Peso atual:</string>
    <string name="tv_altura">Altura:</string>
    <string name="tv_idade">Idade:</string>
    <string name="tv_genero">Genero:</string>
    <string name="tv_imc" translatable="false">IMC:</string>
    <string name="btn_atualizar_text">Atualizar</string>
    <string name="tv_informacao_text">Informações do usuário:</string>
    <string name="iv_ic_perfil_descricao">Ícone de perfil</string>
    <string name="dialog_positive_button_texto_padrao">OK</string>
    <string name="login_activ_dialog_senha_errada_titulo">Senha Errada</string>
    <string name="login_activ_dialog_senha_errada_menssagem">A senha que você digitou não corresponde à senha do usuário.</string>
    <string name="login_activ_dialog_usuario_inexistente_titulo">Usuario Inexistente</string>
    <string name="login_activ_dialog_usuario_inexistente_menssagem">O email inserido não corresponde a um usuário registrado, gostaria de se registrar?</string>
    <string name="login_activ_dialog_registrar_menssagem_sucesso_titulo">Registrado com sucesso</string>
    <string name="login_activ_dialog_registrar_menssagem_sucesso_menssagem">Parabéns! Você está registrado para usar o Polar Dispendium.</string>
    <string name="login_activ_dialog_registrar_menssagem_falha_titulo">Falha ao criar registro</string>
    <string name="login_activ_dialog_registrar_menssagem_falha_menssagem">Falha ao registrar, tente novamente.</string>
    <string name="login_activ_dialog_registrar_menssagem_senha_diferente_titulo">Senha diferente</string>
    <string name="login_activ_dialog_registrar_menssagem_senha_diferente_menssagem">As senhas devem ser iguais.</string>
    <string name="login_activ_dialog_senha_ou_email_invalidos_titulo">Informações inválidas</string>
    <string name="login_activ_dialog_senha_ou_email_invalidos_menssagem">A senha ou email informados não são válidos. Um email válido deve ter o caracter @ e .com com pelo menos 6 dígitos. A senha deve ter no mínimo 6 dígitos. </string>
    <string name="login_activ_dialog_registrar_menssagem_nomeUsuario_minimo_titulo">Tamnho minimo para nome de usuario</string>
    <string name="login_activ_dialog_registrar_menssagem_nomeUsuario_minimo_menssagem">O nome de usuario deve conter pelo menos 5 caracteres</string>
    <string name="tela_principal_dialog_dados_do_usuario_titulo">Quase lá</string>
    <string name="tela_principal_dialog_dados_do_usuario_menssagem">Para a utilização correta do aplicativo, precisamos saber o seu peso e altura.</string>
    <string name="tela_principal_dialog_campos_necessarios_titulo">Campos necessários</string>
    <string name="tela_principal_dialog_campos_necessarios_menssagem">Todos os campos devem ser preenchidos.</string>
    <string name="tela_principal_dialog_sobre_titulo">Sobre o Polar Dispendium</string>
    <string name="tela_principal_dialog_sobre_menssagem">\tPolar Dispendium é um aplicativo desenvolvido por um grupo
        de estudantes e professores do Instituto Federal de Minas Gerais – campus avançado Itabirito.\n
        \tEste aplicativo utiliza como referência o compêndio de atividades físicas publicado por Ainsworth et al (2000)
        e traduzido para a língua portuguesa por Farinatti (2003).\n
        \tPara o cálculo de gasto calórico diário são levadas em consideração a massa corporal,
        além da intensidade e a duração da atividade realizada. O cálculo de calorias do Polar Dispendium é uma estimativa,
        portanto deve ser utilizado com cautela. Para fins de promoção da saúde procure um profissional da área.\n\n\tMais informações em:
    </string>
    <string name="tela_principal_dialog_sobre_btn_link">https://polardispendium.home.blog</string>
    <string name="tela_principal_dialog_logout_titulo">Desconectar</string>
    <string name="tela_principal_dialog_logout_menssagem">Tem certeza que deseja se desconectar?</string>
    <string name="tela_principal_dialog_logout_positivebutton">Desconectar</string>
    <string name="tela_principal_dialog_logout_negativebutton">Cancelar</string>
    <string name="tela_principal_menu_navegacao_inferior_item_configuracoes">Configurações</string>
    <string name="tela_principal_menu_navegacao_inferior_item_home">Início</string>
    <string name="tela_principal_menu_navegacao_inferior_item_peso">Meu Peso</string>
    <string name="tela_principal_menu_navegacao_inferior_item_informacoes">Minhas Informações</string>
    <string name="grafico_gasto_calorico_titulo">Gasto calórico diário (Kcal)</string>
    <string name="grafico_peso_titulo">Meu peso</string>
    <string name="fragment_inicio_dialog_datepicker_titulo">Escolha o dia</string>
    <string name="fragment_inicio_listview_tvhorainicio_text">Início:</string>
    <string name="fragment_inicio_listview_tvhoratermino_text">Término:</string>
    <string name="fragment_inicio_listview_tvtempototal_text">Duração:</string>
    <string name="fragment_inicio_listview_tvgastocalorico_text">Calorias gastas: </string>
    <string name="fragment_informacoes_usuarios_tvpeso_unidade">Kg</string>
    <string name="fragment_informacoes_usuarios_tvaltura_unidade">m</string>
    <string name="fragment_informacoes_usuarios_tvgastocaloricomedio_unidade">por dia</string>
    <string name="fragment_informacoes_usuarios_tvimc_unidade">kg/m\u2072</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_altura_edatualizarvalor_hint">Atualizar altura…</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_altura_titulo">Altere a altura</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_altura_menssagem">Modificar valor da altura</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_peso_edatualizarvalor_hint">Atualizar massa corporal…</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_peso_titulo">Altere o peso</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_peso_menssagem">Modificar valor do peso</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_idade_edatualizarvalor_hint">Atualizar idade…</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_idade_titulo">Altere a idade</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_idade_menssagem">Modificar a idade</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_genero_edatualizarvalor_hint">Atualizar genero…</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_genero_titulo">Altere o genero</string>
    <string name="fragment_informacoes_usuarios_dialog_editar_genero_menssagem">Modificar valor do genero</string>
    <string name="dialog_nova_atividade_autocomplete_item_invalido_dialog_titulo">Item selecionado inválido</string>
    <string name="dialog_nova_atividade_autocomplete_item_invalido_dialog_menssagem">Item selecionado inválido</string>
    <string name="dialog_nova_atividade_btnconfirmar_valores_inadequados_dialog_titulo">Valores inadequados</string>
    <string name="dialog_nova_atividade_btnconfirmar_valores_inadequados_dialog_menssagem">O tempo inicial deve ser menor que o tempo final.</string>
    <string name="dialog_nova_atividade_btnconfirmar_campos_necessarios_vasios_dialog_titulo">Campos necessários vazios</string>
    <string name="dialog_nova_atividade_btnconfirmar_campos_necessarios_vasios_dialog_menssagem">Os campos hora inicial e hora final devem ser preenchidos.</string>
    <string name="dialog_nova_atividade_edhorainicio_titulo">Início</string>
    <string name="dialog_nova_atividade_edhorafim_titulo">Fim</string>
    <string name="dialog_dados_usuarios_edpeso_hint">Massa corporal (Kg)…</string>
    <string name="dialog_dados_usuario_edaltura_hint">Altura…</string>
    <string name="dialog_dados_usuario_edidade_hint">Idade…</string>
    <string name="dialog_dados_usuario_rbMasculino_hint">Masculino</string>
    <string name="dialog_dados_usuario_rbFeminino_hint">Feminino</string>
    <string name="dialog_dados_usuario_btndadosdousuario_texto">Inserir Dados</string>
    <string name="dialog_nova_atividade_acatividade_hint">Digite a atividade ou procure nas caixas abaixo…</string>
    <string name="dialog_registrar_usuario_ednomeregistrar_hint">Nome de usuário</string>
    <string name="dialog_registrar_usuario_edrepetirsenha_hint">Repita a senha</string>
    <string name="dialog_registrar_usuario_btncancelarregistro_texto">Cancelar</string>
    <string name="dialog_registrar_usuario_btnconfirmarregistro_texto">Confirmar</string>
    <string name="dialog_usuario_inexistente_btnrepetir_texto">Repetir</string>
    <string name="dialog_usuario_inexistente_btnregistrar_texto">Registrar</string>
    <string name="fragment_informacoes_usuario_tvpesoinicial_texto">Peso Inicial:</string>
    <string name="fragment_informacoes_usuario_tvmediagastoscalorias_texto">Gasto médio de calorias:</string>
    <string name="fragment_informacoes_usuario_tvmaximogastoscalorias_texto">Gasto máximo de calorias em um dia:</string>
    <string name="fragment_informacoes_usuario_tvminimogastoscalorias_texto">Gasto mínimo de calorias em um dia:</string>
    <string name="fragment_informacoes_usuario_tvIdade_texto_nao_informado">Idade não informada</string>
    <string name="fragment_informacoes_usuario_tvGenero_texto_nao_informado">Genero não informado</string>
    <string name="fragment_peso_tvprogresso_texto">Progresso</string>
    <string name="fragmento_peso_tvatualisarpeso_texto">Atualizar seu peso atual:</string>
    <string name="fragment_peso_edmeupeso_hint">Seu peso atual…</string>
    <string name="menu_bottom_menu_item_inicio">Início</string>
    <string name="menu_bottom_menu_item_peso">Peso</string>
    <string name="menu_bottom_menu_item_eu">Eu</string>
    <string name="menu_item_sobre">Sobre</string>
    <string name="menu_item_sair">Sair</string>
    <string name="menu_item_desconectar">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_opcao_titulotextview_text">Opções do aplicativo</string>
    <string name="menu_item_configuracoes">Configurações</string>
    <string name="fragment_config_layout_tv_tamanho_da_fonte_do_grafico">Tamanho da fonte no gráfico</string>
    <string name="fragment_config_layout_tv_tamanho_dos_pontos_no_grafico">Tamanho dos pontos no gráfico</string>
    <string name="fragment_config_layout_tv_tempo_de_oculta_o_do_grafico">Tempo de ocultação do gráfico</string>
    <string name="fragment_config_layout_tv_sensibilidade_de_rolamento">Sensibilidade de rolamento</string>
    <string name="fragment_config_layout_btn_redefinir_texto">Redefinir configurações</string>
</resources>