<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ifmg.test.TelaPrincipal">
    <item
        android:id="@+id/imSobre"
        android:orderInCategory="110"
        android:title="@string/menu_item_sobre"
        app:showAsAction="never" />
    <item
        android:id="@+id/imSair"
        android:orderInCategory="200"
        android:title="@string/menu_item_sair"
        app:showAsAction="never" />
    <item
        android:id="@+id/imLogOut"
        android:orderInCategory="150"
        android:title="@string/menu_item_desconectar"
        app:showAsAction="never" />
    <item
        android:id="@+id/imConfiguracoes"
        android:orderInCategory="100"
        android:title="@string/menu_item_configuracoes"
        app:showAsAction="never" />
</menu>
