<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
    <item
        android:title="@string/menu_bottom_menu_item_inicio"
        android:icon="@drawable/ic_home"
        android:id="@+id/menu_item_home"
        android:checked="true">

    </item>
    <item
        android:title="@string/menu_bottom_menu_item_peso"
        android:icon="@drawable/ic_balanca"
        android:id="@+id/menu_item_peso">

    </item>
        <item
            android:title="@string/menu_bottom_menu_item_eu"
            android:icon="@drawable/ic_perfil"
            android:id="@+id/menu_item_eu">

        </item>
    </group>
</menu>