<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="15dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/edPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/dialog_dados_usuarios_edpeso_hint"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/edAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/dialog_dados_usuario_edaltura_hint"
            android:inputType="number|numberDecimal" />

        <Button
            android:id="@+id/btnDadoDoUsuario"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_dados_usuario_btndadosdousuario_texto" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>