<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbars="horizontal">

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/acAtividade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:dropDownHeight="wrap_content"
                android:hint="@string/dialog_nova_atividade_acatividade_hint"
                android:singleLine="false"
                android:spinnerMode="dialog"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:dropDownWidth="match_parent"
                android:scrollbars="horizontal"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/spAtividade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:scrollbars="horizontal"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edHoraInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ed_hint_hora_de_inicio"
                android:inputType="textAutoComplete|time" />

            <EditText
                android:id="@+id/edHorafim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ed_hint_hora_de_termino"
                android:inputType="textAutoComplete|time" />
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirmar"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/btn_confirmar" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>