<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPeso">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/graficoContainerPeso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.3">

            <ImageView
                android:id="@+id/ivGraficoPeso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProgresso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/fragment_peso_tvprogresso_texto" />

            <TextView
                android:id="@+id/tvAtualizarPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/fragmento_peso_tvatualisarpeso_texto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edMeuPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/fragment_peso_edmeupeso_hint"
                    android:inputType="number|numberDecimal" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabAtualizarPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_refresh"
                    android:tint="@color/pontosDoGrafico"
                    app:backgroundTint="@color/colorPrimary"
                    app:fabSize="mini" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>